<resources>
    <string name="app_name">Talktomii</string>
    <string name="alert">Alert</string>
    <string name="map_key" translatable="false">AIzaSyCQ4feMgizeFCAQWSsOJzd5Vq3eFQBtnuo</string>
    <string name="ok">OK</string>
    <string name="message">Success</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_req">Permission Required</string>
    <string name="location_permission_req">Location permission required.</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="login_to_furniture_market">Login to Furniture Market</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="by_continue_you_agree">By continue, you agree to our</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">501682688214266</string>
    <string name="fb_login_protocol_scheme">fb501682688214266</string>
    <string name="signup_to_furniture_market">Signup to Furniture Market</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="english">English</string>
    <string name="arabic">arabic</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="secure">Secure</string>
    <string name="my_bookings">My Bookings</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="reliable_affordable_quick_quality">Reliable | Affordable | Quick | Quality</string>
    <string name="your_furniture_service_expert">Your Furniture Service Expert</string>
    <string name="how_we_work">How it work?</string>
    <string name="select_service">Select Service</string>
    <string name="upload_images">Upload Images</string>
    <string name="book_appoinment">Book Appointment</string>
    <string name="service_inspection_by_experts">Service Inspection by Experts</string>
    <string name="pay_online_or_by_cash">Pay Online or by Cash</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="birth_of_birth">Birth of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="we_secure">We Secure</string>
    <string name="cleaning_and_safety_guidelines_in_terms_of_covid_19">Cleaning and safety Guidelines in terms of covid-19</string>
    <string name="contact_us">Contact Us</string>
    <string name="get_in_touch_with_us">Get in touch with us</string>
    <string name="_697_598_7447">+966 920012913</string>
    <string name="www_furnituremarket_com">hello@furnifix.com.sa</string>
    <string name="or">OR</string>
    <string name="having_trouble_tell_us_about_it">Having trouble? Tell us about it and we’ll get back to you!</string>
    <string name="tell_us_about_your_issue_here">Tell us about your issue here...</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="driver_name">Driver Name</string>
    <string name="search_by_location_or_person">Search services...</string>
    <string name="most_popular">Most Popular Services</string>
    <string name="all_services">All Services</string>
    <string name="customer_stories">Customer Stories</string>
    <string name="choose_product">Choose Product</string>
    <string name="choose_product_type">Choose product type</string>
    <string name="continue_">Continue</string>
    <string name="select_type_of_service">Select type of service</string>
    <string name="change">CHANGE</string>
    <string name="upload_image">Upload Image</string>
    <string name="service">Service</string>
    <string name="camera">Camera</string>
    <string name="choose_gallery">Gallery</string>
    <string name="select_your_choice">Select your choice</string>
    <string name="gallery">Gallery</string>
    <string name="select_a_media_file">Select a media</string>
    <string name="camera_permission_req">Camera permission required.</string>
    <string name="storage_permission_req">Storage permission required.</string>
    <string name="notification">Notification</string>
    <string name="choose_date">Choose Date</string>
    <string name="make_payment">Make Payment</string>
    <string name="checkout">Checkout</string>
    <string name="service_charges">Service Charges</string>
    <string name="common_tax">Common Tax</string>
    <string name="note_if_you_are_upgrading_to_a_higher_membership">Note: If you are upgrading to a higher membership tier, you only pay the difference between the previous and new memberships &amp; Delivery fee will be charged for every order.</string>
    <string name="saved_cards">SAVED CARDS</string>
    <string name="other_payment_methods">Other payment Methods</string>
    <string name="verification">Verification</string>
    <string name="we_sent_you_a_code_to_verify_your_phone_number">We sent you a code to verify your Phone Number</string>
    <string name="didn_t_receive_the_code_yet_resend_code">Didn\'t receive the code yet? Resend code</string>
    <string name="verify">verify</string>
    <string name="resend_code">Resend code</string>
    <string name="request_details">Request Details</string>
    <string name="images">Images</string>
    <string name="choose_address">Choose Address</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="status">Status</string>
    <string name="time_frame">Time Frame</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="cart">Cart</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="thank_you_for_submitting_your_request">Thank you for submitting your request. We will get back to you with payment link in next 24hrs.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="add_new_address">Add new address</string>
    <string name="block_number">Block Number</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="add">Add</string>
    <string name="card_number">Card Number</string>
    <string name="add_new_card">Add new card</string>
    <string name="name_on_card">Name on card</string>
    <string name="cvv">CVV</string>
    <string name="validation_number">Please enter you mobile number.</string>
    <string name="validation_number_lenght">Please enter a valid mobile number.</string>
    <string name="validation_email">Please enter your email address.</string>
    <string name="validation_email_address">Please enter a valid email address.</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="otp_send_successful">OTP send successfully.</string>
    <string name="validation_otp">Please enter a valid OTP.</string>
    <string name="logout">Logout</string>
    <string name="no_email_app_installed">No email found in your device</string>
    <string name="send_email">Send email</string>
    <string name="update">Update</string>
    <string name="validation_name">Please enter your name.</string>
    <string name="validation_address">Please enter your address.</string>
    <string name="validation_dob">Please enter your date of birth</string>
    <string name="validation_gender">Please select your gender.</string>
    <string name="select_atleast_one_product">Select at-least one product type</string>
    <string name="s_hours">%s hours</string>
    <string name="add_new">Add New</string>
    <string name="add_your_address">Add your address</string>
    <string name="add_your_block_number">Add your block number</string>
    <string name="add_your_city">Add your city</string>
    <string name="select_your_city">Select your city</string>
    <string name="add_your_zipcode">Add your zip-code</string>
    <string name="address_data">• %s</string>
    <string name="select_address_first">Select address first</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="service_added_to_cart_succesfully">Service added to cart successfully</string>
    <string name="select_address">Select Address</string>
    <string name="add_another_service">Add another service</string>
    <string name="choose_time_slot">Choose Time Slot</string>
    <string name="please_select_date_time_slot_from_list">Please select date and time slot from the list</string>
    <string name="please_add_rating_and_reviews_for_the_vender">Please add rating and reviews for the vender</string>
    <string name="write_review">Write review</string>
    <string name="add_your_review_about_job">Add your review about the job</string>
    <string name="add_rating">Add Rating</string>
    <string name="select_offered_service">Select Offered Service</string>
    <string name="s_s_off">%s%s Off</string>
    <string name="order_completed">Confirm Order?</string>
    <string name="are_you_confirmed_your_request_has_completed_successfully">I confirm that I have received my item back in good condition.</string>
    <string name="i_accept_our">I accept our</string>
    <string name="terms">Terms</string>
    <string name="policy">Policy</string>
    <string name="apply">Apply</string>
    <string name="coupon_code">coupon code</string>
    <string name="total">Total</string>
    <string name="remove">Remove</string>
    <string name="purchased_from">Purchased from</string>
    <string name="purchased_on">Purchased On</string>
    <string name="extra_note">Extra note</string>
    <string name="language_setting">Language Setting</string>
    <string name="switch_to_s">Switch to %s</string>
    <string name="customer_id_s">Customer ID : %s</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online_pay">Online Pay</string>
    <string name="select_payment_mode">Select payment mode</string>
    <string name="please_enter_your_mobile_number_to_complete_your_profile">Please enter your mobile number to complete your profile</string>
    <string name="hi_s">Hi %s,</string>
    <string name="expiry">Expiry</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="trending_products">Trending Products</string>
    <string name="customer_favorite">Customer Favorite</string>
    <string name="promo_code_applied_succesfully">Promo Code Applied Succesfully!</string>
    <string name="mada">Mada</string>
    <string name="visa">Visa</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="card_type">Card Type</string>
    <string name="tell_us_more_about_you" translatable="false">Tell us more \nAbout You</string>
    <string name="preferred_topics" translatable="false">Preferred Topics</string>
    <string name="search">Search</string>
    <string name="my_cards">My Cards</string>
    <string name="add_card">Add Card</string>
    <string name="mycard_text">53****1234</string>
    <string name="add_creditcard">Add Credit Card</string>
    <string name="back">Back</string>
    <string name="payment_details">Payment details</string>
    <string name="referenceID">Reference ID</string>
</resources>