<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/select_booking"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/selector_secure"
        android:title="Appointments"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/selector_contact"
        android:title="Notifications"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>