<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.contactUs.ContactUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/contact_us" />

        </androidx.appcompat.widget.Toolbar>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTittle"
            style="@style/TextViewStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/get_in_touch_with_us"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_5"
            android:drawableStart="@drawable/ic_seven"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:text="@string/_697_598_7447"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTittle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_16"
            android:drawableStart="@drawable/ic_eight"
            android:drawablePadding="@dimen/dp_16"
            android:gravity="center_vertical"
            android:text="@string/www_furnituremarket_com"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCall" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow"
            android:layout_marginEnd="@dimen/dp_16"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/tvMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvMail" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@color/grey_text"
            app:layout_constraintBottom_toBottomOf="@id/tvOr"
            app:layout_constraintTop_toTopOf="@id/tvOr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            android:layout_width="@dimen/dp_40"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/status_bar_color"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMail" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubTittle"
            style="@style/TextViewStyleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/having_trouble_tell_us_about_it"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOr" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginTop="@dimen/dp_8"
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_transparent_rounded"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/tell_us_about_your_issue_here"
            android:maxHeight="@dimen/dp_150"
            android:minHeight="@dimen/dp_150"
            android:padding="@dimen/dp_16"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@id/tvSubTittle" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>