<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.checkout.addCard.AddCardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/add_new_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/etCarNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_transparent_cornor_round"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/card_number"
            android:inputType="number"
            android:maxLength="20"
            android:padding="@dimen/dp_10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <EditText
            android:id="@+id/etCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_transparent_cornor_round"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/name_on_card"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:visibility="gone"
            android:padding="@dimen/dp_10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/etCarNumber" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etMMYY"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_transparent_cornor_round"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/expiry_date"
            android:maxLength="7"
            android:padding="@dimen/dp_10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/etCardName" />

        <EditText
            android:id="@+id/etCvv"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_transparent_cornor_round"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:hint="@string/cvv"
            android:maxLength="4"
            android:padding="@dimen/dp_10"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/etCardName" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewStyleMedium"
            android:id="@+id/tvCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/card_type"
            android:layout_marginTop="@dimen/dp_20"
            app:layout_constraintStart_toStartOf="@+id/etMMYY"
            app:layout_constraintTop_toBottomOf="@+id/etMMYY" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCard">


            <ImageView
                android:id="@+id/ivMada"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center"
                android:src="@drawable/ic_mada" />

            <TextView
                android:layout_marginStart="3dp"
                android:text="@string/mada"
                android:visibility="gone"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioMada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="@dimen/dp_12"
                android:buttonTint="@color/colorAccent"
                android:paddingStart="@dimen/dp_12"
                />

            <ImageView
                android:src="@drawable/ic_visa"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginStart="3dp"
                android:text="@string/visa"
                android:visibility="gone"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/radioVisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:buttonTint="@color/colorAccent"
                android:paddingStart="@dimen/dp_12"
                />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/ButtonRedBackgroundStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:text="@string/add"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>